# binary-data

./: .gitignore  Cargo.toml  README.md  test.ddd
examples/: bit_reader.rs  mem_buffer.rs  read_out_of_bounds.rs  ring_mem_buffer.rs  write.rs
src/: bin_bit_reader.rs  bin_byte_order.rs  bin_error.rs  bin_file.rs  bin_memory_buffer.rs  bin_read.rs  bin_reader.rs  bin_ring_memory_buffer.rs  bin_seek.rs  bin_writer.rs  lib.rs
tests/: bit_reader_tests.rs
